# low-rank-cl

./: ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  environment.yaml  main.py  pyproject.toml  summarize.py
.claude/commands/: bootstrap.md  summarize.md
configs/actmat-c/: cifar100.json
configs/actmat-c-l1.0/: cifar100.json  domain.json  imagenet-a.json  imagenet-r.json
configs/actmat-c-l10.0/: cifar100.json  domain.json  imagenet-a.json  imagenet-r.json
configs/actmat-c-l100.0/: cifar100.json  domain.json  imagenet-a.json  imagenet-r.json
configs/actmat-c-l1000.0/: cifar100.json  domain.json  imagenet-a.json  imagenet-r.json
configs/actmat-d/: cifar100.json
configs/actmat-d-l1.0/: cifar100.json  domain.json  imagenet-a.json  imagenet-r.json
configs/actmat-d-l10.0/: cifar100.json  domain.json  imagenet-a.json  imagenet-r.json
configs/actmat-d-l100.0/: cifar100.json  domain.json  imagenet-a.json  imagenet-r.json
configs/actmat-d-l1000.0/: cifar100.json  domain.json  imagenet-a.json  imagenet-r.json
configs/cllora/: imagenet-a.json  imagenet-r.json
configs/ewcdlora/: cifar100.json  domain.json  imagenet-a.json  imagenet-r.json
configs/l2lora-l1.0/: domain.json  imagenet-a.json  imagenet-r.json
dataloaders/: data_manager.py
methods/: actmat_c.py  actmat_d.py  base.py  baseline.py  cllora.py  ewcdlora.py  ewclora.py  l2lora.py
models/: net.py  net_cllora.py  net_ewcdlora.py  net_sdlora.py  vit_cllora.py  vit_ewcdlora.py
scripts/: run-arr.sh  run.sh  run2.sh
tests/: test_actmat_c.py
utils/: covariance.py  factory.py  toolkit.py
(+5 files in other folders)
