[project]
name = "low-rank-cl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "ipdb>=0.13.13",
    "numpy==1.25.2",
    "pyyaml>=6.0.3",
    "scikit-learn==1.2.0",
    "scipy>=1.13.1",
    "six>=1.17.0",
    "timm==0.6.12",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "tqdm>=4.67.3",
]
